--- a/src/assets/css/agency.css
+++ b/src/assets/css/agency.css
@@ -1,3 +1,9 @@
+.agency-container{
+  background: #efeff4;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
+}
 .switch-box {
   padding: 0 0.22rem;
   box-sizing: border-box;
@@ -40,10 +46,9 @@
 
 .centerDiv {
   background-color: #ffffff;
-  box-shadow: 0 0.03rem 0.06rem 0.01rem rgba(0, 0, 0, 0.12);
   border-radius: 0.1rem;
-  margin: 1.3rem 0.22rem 0 0.22rem;
-  padding: 1rem 0.35rem 1rem 0.35rem;
+  margin: 0.8rem 0.22rem 0 0.22rem;
+  padding: 1.5rem 0.35rem 1.5rem 0.35rem;
   box-sizing: border-box;
 }
 
