--- a/src/assets/css/new_earnorder.css
+++ b/src/assets/css/new_earnorder.css
@@ -205,7 +205,7 @@
 				right: 0.8rem;
 				color: #999999;
 				font-size: 0.28rem;
-				background-color: ;
+				/*background-color: ;*/
 			}
 			
 			.leijiDiv {
