--- a/src/assets/css/deviceManager.css
+++ b/src/assets/css/deviceManager.css
@@ -43,6 +43,7 @@
       height: 1.1rem;
       width: 100%;
       position: fixed;
+      line-height: 0.3rem;
       bottom: 0;
       box-shadow: 0 0 0.1rem rgba(0, 0, 0, 0.1);
       background: rgba(255, 252, 252, 0.98);
