--- a/src/assets/css/new_earnorder.css
+++ b/src/assets/css/new_earnorder.css
@@ -10,8 +10,8 @@
 			}
 			
 			.shop_img {
-				width: 1.27rem;
-				height: 1.27rem;
+				width: 1.3rem;
+				height: 1.3rem;
 			}
 			
 			.plate-list {
@@ -62,7 +62,7 @@
 			}
 			
 			p.shop_Title {
-				font-size: 0.18rem;
+				font-size: 0.24rem;
 				color: #555555;
 				line-height: 0.34rem;
 				margin: 0;
@@ -148,7 +148,7 @@
 				right: 0;
 				bottom: 0.1rem;
 				color: #666666;
-				font-size: 0.18rem;
+				font-size: 0.24rem;
 			}
 			
 			.ready_account {
@@ -212,19 +212,23 @@
 				background-color: #ffffff;
 				box-shadow: 0px 0.03rem 0.06rem 0.01rem rgba(0, 0, 0, 0.12);
 				border-radius: 0.1rem;
-				display: flex;
+	/*			display: flex;
 				align-items: center;
-				justify-content: space-between;
+				justify-content: space-between;*/
 				margin: 0.23rem 0.22rem 0 0.22rem;
 				box-sizing: border-box;
 			}
 			
 			.leijiDiv .item {
 				width: 49%;
-				height: 0.65rem;
+				height: 0.8rem;
 				line-height: 0.65rem;
 				color: #666666;
-				font-size: 0.18rem;
+				font-size: 0.24rem;
+        margin-left: 0.3rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 			}
 			
 			.leijiDiv .item:first-of-type {
@@ -244,11 +248,11 @@
 				margin-left: 0.37rem;
 			}
 			
-			.leijiDiv .line {
+	/*		.leijiDiv .line {
 				width: 0.01rem;
 				height: .27rem;
 				background-color: #4f5965;
-			}
+			}*/
 			
 			.switch-box {
 				padding: 0 0.22rem;
@@ -286,7 +290,7 @@
 				justify-content: space-between;
 				height: 0.51rem;
 				border-top: 0.01rem solid #999999;
-				font-size: 0.18rem;
+				font-size: 0.2rem;
 				color: #666666;
 			}
 			
