--- a/src/assets/css/agency.css
+++ b/src/assets/css/agency.css
@@ -2,6 +2,7 @@
   background: #efeff4;
   width: 100vw;
   height: 100vh;
+  /*-webkit-overflow-scrolling : touch;*/
   overflow: auto;
 }
 .switch-box {
